# install-grid

./: Cargo.toml  README.md  build.rs  build.rs.bk
doc/: install-grid-architecture.md
scripts/: check-legacy-ffi.sh
src/: application.rs  ffi.rs  host.rs  lib.rs  plugins.rs  ui.rs
src/plugins/: legacy.rs
